// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a full article with all content items with dropcap template 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <Text
            style={
              Object {
                "color": undefined,
                "fontFamily": "TimesModern-Regular",
                "fontSize": 112.19999999999999,
                "left": 55.1435546875,
                "lineHeight": 112.19999999999999,
                "position": "absolute",
                "top": -8.5,
              }
            }
          >
            T
          </Text>
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 72,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                his
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 98,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                being
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 144,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                Black
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 189,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                History
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 248,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                Month,
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 304,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                last
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 336,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                week
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingHorizontal": 10,
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`2. an article with interactives 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingHorizontal": 10,
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingHorizontal": 0,
                "width": "100%",
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`3. an article with no content 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ArticleExtras />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`4. an article with a nested markup in first paragraph displays a drop cap 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <Text
            style={
              Object {
                "color": undefined,
                "fontFamily": "TimesModern-Regular",
                "fontSize": 112.19999999999999,
                "left": 56.6875,
                "lineHeight": 112.19999999999999,
                "position": "absolute",
                "top": -8.5,
              }
            }
          >
            Q
          </Text>
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 77,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                Some
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 124,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                years
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 169,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                ago
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 202,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                I
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 211,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                made
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 258,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                the
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 286,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                decision
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 354,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                to
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 373,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                take
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 409,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                as
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 432,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                a
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 445,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                friend
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 493,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                a
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 507,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                woman
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 567,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                who
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 603,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                is
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 620,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                very
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 77,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 28,
                  }
                }
              >
                opinionated.
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 17,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 28,
                    }
                  }
                >
                  When she does come to social events, she dominates.
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`5. an article skeleton with responsive items 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
                "width": 660,
              }
            }
          >
            <View>
              <Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 17,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "lineHeight": 28,
                    }
                  }
                >
                  This being Black History Month, last week
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingHorizontal": 10,
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;
